<resources>
    <string name="app_name">To-Do List</string>
    <string name="add">Add</string>
    <string name="about">About</string>
    <string name="about_the_app">About the App</string>
    <string name="gilmore">Gilmore</string>
    <string name="gilmore_bio">Hello, I am a Junior at Indiana University - Bloomington studying Computer Science. I enjoy traveling, fitness, foreign cultures, and live music. I have a professional background across several industries and positions.</string>
    <string name="sehoon_bio">placeholder<!-- TODO: Add a bio for the About Page --></string>
    <string name="sehoon">Sehoon</string>
    <string name="about_image_desc">About the application and devs</string>
    <string name="gilmore_img_desc">Gilmore: Developer</string>
    <string name="sehoon_img_desc">Sehoon: Developer</string>
    <string name="app_logo">App Logo</string>
    <string name="add_new_task">Add New Task</string>
    <string name="task_name_prompt">Enter New Task Name</string>
    <string name="task_input_rules">25 characters allowed.\nEnter at least 3 characters.</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="checkbox_status">Checkbox: Disabled</string>
    <string name="mark_as_complete">Mark as Complete</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="too_much_work">TOO MUCH WORK!</string>
</resources>