<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="45dp"
    android:paddingVertical="20dp"
    tools:context=".TaskActivity">

    <TextView
        android:id="@+id/task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:text="@string/add_new_task"
        android:textAlignment="center"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <LinearLayout
        android:id="@+id/task_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_title">

        <EditText
            android:id="@+id/task_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_name_prompt"
            android:inputType="text"
            android:minHeight="80dp"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/task_rules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:paddingHorizontal="5dp"
            android:text="@string/task_input_rules"
            android:textSize="18sp" />

        <Button
            android:id="@+id/save_task_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="@dimen/button_text_size" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />
        <Button
            android:id="@+id/cancel_edit_task_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>